# SE_bastille-installer

./: Cargo.toml  NOHRM.md  README.md  SE_bastille-installer  app2.rs
config/: log4rs.yml
files/boot/: boot.cmd  cmdline.txt  config.txt
files/pacman.d/: mirrorlist-archlinuxarm
src/: app.rs  error.rs  forms.rs  main.rs
src/app/: box.rs  commands.rs  constants.rs  dbox.rs  install.rs  mbox.rs
src/app/commands/: action.rs  execute.rs  list.rs  output.rs  read.rs  run.rs
src/app/dbox/: command.rs  ebox.rs  list.rs  text.rs  type.rs
src/forms/: constants.rs
src/shared/: constants.rs
src/shared/constants/: char.rs  command.rs  dbox.rs  error.rs  install.rs  scraper.rs  string.rs
src/tests/: test.rs
