[package]
name = "se_bastille-installer"
version = "0.1.0"
edition = "2021"
authors = ["Folât Pjêrsômêj"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const_format = "0.2"
dialog = { git = "https://github.com/safenetwork-community/dialog-rs.git" }
env_logger = "0.10"
regex = "1.10"
thiserror = "1.0"

[profile.release]
strip = true
