[package]
name = "se_bastille-installer"
version = "0.1.0"
edition = "2021"
authors = ["Folât Pjêrsômêj"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
const_format = { version = "0.2", features = ["rust_1_64"]}
dialog = { git = "https://github.com/safenetwork-community/dialog-rs.git" }
itertools = "0.12.1"
log = "0.4"
regex = "1.10"
simplelog = "0.12"

[profile.release]
strip = true
