[package]
name = "se_bastille_installer"
version = "0.1.0"
edition = "2021"
authors = ["Folât Pjêrsômêj"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
const_format = { version = "0.2", features = ["rust_1_64"] }
dialog = { git = "https://github.com/safenetwork-community/dialog-rs.git" }
duct = "0.13"
itertools = "0.12.1"
log = "0.4"
log4rs = "1.3"
regex = "1.10"
reqwest = { version = "0.12.9", features = ["blocking"] }
scraper = "0.21.0"
surrealdb = "2.1.3"

[profile.release]
strip = true
